<resources>
    <string name="app_name">Tunaiku Asessment</string>
    <string name="ERROR_NETWORK">Maaf, Pastikan Anda Terhubung Dengan Koneksi Internet</string>
    <string name="UNKNOWN_ERROR">Maaf, Terjadi Kesalahan..</string>

    <string name="personal_data_nomor_ktp_hint">Masukkan Nomor KTP</string>
    <string name="personal_data_nomor_ktp_label">Nomor KTP</string>
    <string name="personal_data_full_name">Nama Lengkap</string>
    <string name="personal_data_full_name_hint">Masukkan Nama Lengkap</string>
    <string name="personal_data_nomor_rekening_label">Nomor Rekening</string>
    <string name="personal_data_nomor_rekening_hint">Masukkan Nomor Rekening</string>
    <string name="personal_data_tingkat_pendidikan_label">Tingkat Pendidikan</string>
    <string name="personal_date_tanggal_lahir_label">Tanggal Lahir</string>
    <string name="personal_data_tanggal_lahir_hint">Pilih Tanggal Lahir</string>
    <string name="personal_data_next_action">Lanjut</string>
    <string name="personal_data_title">Data Diri</string>
    <string name="ktp_address_title">Alamat KTP</string>
    <string name="ktp_address_label">Alamat KTP</string>
    <string name="ktp_address_hint">Masukkan Alamat KTP</string>
    <string name="ktp_address_jenis_tempat_tinggal">Jenis Tempat Tinggal</string>
    <string name="ktp_address_nomor_blok_label">Nomor Blok</string>
    <string name="ktp_address_nomor_blok_hint">Masukkan Nomor Blok</string>
    <string name="ktp_address_province_label">Provinsi</string>
    <string-array name="personal_data_tingkat_pendidikan">
        <item>Pilih Tingkat Pendidikan</item>
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="ktp_address_jenis_tempat_tinggal">
        <item>Pilih Jenis Tempat Tinggal</item>
        <item>Rumah</item>
        <item>Kantor</item>
    </string-array>
    <string name="title_activity_review_data">ReviewDataActivity</string>
    <string name="review_data_personal_data_title">Review Input Data Diri</string>
    <string name="review_data_nomor_ktp_label">Nomor KTP</string>
    <string name="review_data_nama_lengkap_label">Nama Lengkap</string>
    <string name="review_data_nomor_rekening_label">Nomor Rekening</string>
    <string name="review_data_tingkat_pendidikan_label">Tingkat Pendidikan</string>
    <string name="review_data_title">Review Data</string>
    <string name="review_data_alamat_ktp_title">Review Alamat KTP</string>
    <string name="review_data_alamat_ktp_label">Alamat KTP</string>
    <string name="review_data_jenis_tempat_tinggal_title">Jenis Tempat Tinggal</string>
    <string name="review_data_nomor_blok_label">Nomor Blok</string>
    <string name="review_data_province_label">Provinsi</string>
    <string name="personal_data_nomor_ktp_min_char_error_message">Nomor KTP minimal 16 karakter</string>
    <string name="personal_data_nomor_ktp_numeric_error_message">Nomor KTP hanya boleh mengandung angka</string>
    <string name="personal_data_nama_lengkap_required_error_message">Nama Lengkap harus diisi</string>
    <string name="personal_data_nama_lengkap_max_char_error_message">Nama Lengkap maksimal 10 karakter</string>
    <string name="personal_data_nomor_ktp_required_error_message">Nomor KTP harus diisi</string>
    <string name="personal_data_nama_lengkap_invalid_error_message">Nama Lengkap hanya boleh mengandung huruf</string>
    <string name="personal_data_nomor_rekening_required_error_message">Nomor Rekening harus diisi</string>
    <string name="personal_data_nomor_rekening_min_char_error_message">Nomor Rekening minimal 8 karakter</string>
    <string name="personal_data_nomor_rekening_invalid_error_message">Nomor Rekening hanya boleh mengandung angka</string>
    <string name="personal_data_tingkat_pendidikan_not_selected_error_message">Tingkat Pendidikan harus dipilih</string>
    <string name="personal_data_tanggal_lahir_required_error_message">Tanggal Lahir harus diisi</string>
    <string name="ktp_address_alamat_ktp_required_error_message">Alamat KTP harus diisi</string>
    <string name="ktp_address_alamat_ktp_max_char_error_message">Alamat KTP maksimal 100 karakter</string>
    <string name="ktp_address_jenis_tempat_tinggal_not_selected_error_message">Jenis Tempat Tinggal harus dipilih</string>
    <string name="ktp_address_nomor_blok_required_error_message">Nomor Blok harus diisi</string>
    <string name="ktp_address_provinsi_not_selected_error_message">Provinsi harus dipilih</string>

    <string name="ktp_address_provinsi_default_option">Pilih Provinsi</string>
    <string name="try_again_action">Coba Lagi</string>
    <string name="title_activity_ktp_address">KtpAddressActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="personal_data_nomor_ktp_max_char_error_message">Nomor KTP maksimal 16 karakter</string>
    <string name="konfirmasi">Konfirmasi</string>
</resources>
