<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_personal_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:showIn=".ui.app.PersonalDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/personal_data_nomor_ktp_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_nomor_ktp"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/personal_data_nomor_ktp_hint"
            android:inputType="numberSigned"
            android:maxLength="16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/personal_data_full_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_nama_lengkap"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/personal_data_full_name_hint"
            android:inputType="textPersonName"
            android:maxLength="20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/personal_data_nomor_rekening_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_nomor_rekening"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/personal_data_nomor_rekening_hint"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/personal_data_tingkat_pendidikan_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <Spinner
            android:id="@+id/spinner_tingkat_pendidikan"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:text="@string/personal_date_tanggal_lahir_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_birth_date"
            style="@style/DatePickerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_18sdp"
            android:hint="@string/personal_data_tanggal_lahir_hint" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/personal_data_next_action" />

    </LinearLayout>

</ScrollView>