<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.review.FormReviewActivity"
    tools:showIn="@layout/activity_form_review">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_23sdp"
            android:text="@string/review_data_personal_data_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_nomor_ktp_label" />

        <TextView
            android:id="@+id/tv_nomor_ktp"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_nama_lengkap_label" />

        <TextView
            android:id="@+id/tv_nama_lengkap"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_nomor_rekening_label" />

        <TextView
            android:id="@+id/tv_nomor_rekening"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_tingkat_pendidikan_label" />

        <TextView
            android:id="@+id/tv_tingkat_pendidikan"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/personal_date_tanggal_lahir_label" />

        <TextView
            android:id="@+id/tv_tanggal_lahir"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/divider" />

        <TextView
            android:textColor="@android:color/black"
            android:textSize="@dimen/_23sdp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/review_data_alamat_ktp_title" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_alamat_ktp_label" />

        <TextView
            android:id="@+id/tv_alamat_ktp"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_jenis_tempat_tinggal_title" />

        <TextView
            android:id="@+id/tv_jenis_tempat_tinggal"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_nomor_blok_label" />

        <TextView
            android:id="@+id/tv_nomor_blok"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/review_data_province_label" />

        <TextView
            android:id="@+id/tv_provinsi"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnKonfirmasi"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="backToMain"
            android:layout_gravity="center_horizontal"
            style="@style/Button"/>


    </LinearLayout>

</ScrollView>