<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.KtpAddressActivity"
    tools:showIn="@layout/activity_ktp_address">

    <include
        layout="@layout/loader"
        android:visibility="gone" />

    <include
        layout="@layout/error_layout"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sv_ktp_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ktp_address_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edt_alamat_ktp"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="top"
                android:hint="@string/ktp_address_hint"
                android:maxLength="100"
                android:minLines="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ktp_address_jenis_tempat_tinggal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spinner_jenis_tempat_tinggal"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ktp_address_nomor_blok_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edt_nomor_blok"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/ktp_address_nomor_blok_hint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ktp_address_province_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spinner_provinsi"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:padding="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/btn_next"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_data_next_action" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>